# unified-recsys

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.mlops.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements-mlops.txt  requirements.txt  run_track3.ps1
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  observability.py  schemas.py
app/db/: base.py  models.py  repository.py
app/routers/: admin.py  consent.py  events.py  health.py  recommend.py
app/services/: cache.py  engine.py
batch/: scheduler.py
docs/: track2_federated.md  track3_windows.md  track4_mlops.md  trivago_dataset.md
migrations/: env.py
migrations/versions/: 0001_initial.py
mlops/: ann.py  retrain.py  tracking.py
monitoring/: grafana-dashboard.json  prometheus.yml
notebooks/: track3_colab.ipynb
recsys/: __init__.py  clustering.py  collaborative.py  config.py  content.py  context.py  dataset.py  features.py  hybrid.py  metrics.py  mlcore.py  simulation.py  time_decay.py
recsys/data/: trivago.py
recsys/evaluation/: baselines.py  metrics.py  protocol.py
recsys/federated/: dp.py  fedavg.py  partition.py
results/: trivago_metrics.json
scripts/: ablation_ltr.py  compare_models.py  db_smoke.py  eval_trivago.py  make_charts.py  make_trivago_sample.py  plot_federated.py  plot_track3.py  run_federated.py  run_simulation.py  seed_data.py  trivago_eval_cached.py  trivago_extract.py  tune_optuna.py
tests/: conftest.py  test_db.py  test_recsys.py
(+7 files in other folders)
